--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 docs/credentials_private_key_gbq
 
 # Ignore arquivos da pasta de camadas raw, silver e gold.
-src/backend/data/1_raw/raw_wallet_br.csv
-src/backend/data/1_raw/raw_historical_stock_price_br.csv
+# src/backend/data/1_raw/raw_wallet_br.csv
+# src/backend/data/1_raw/raw_historical_stock_price_br.csv
 
 src/backend/data/2_silver/silver_wallet_br.csv
 src/backend/data/2_silver/silver_historical_stock_price_br.csv
