--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Ignore a Maquina Virtual
 .venv/
 
-# Ignore a pasta de credenciais do google credentials_private_key_gbq
-docs/credentials_private_key_gbq
+# Ignore arquivos relacionados às credenciais e chaves de API
+credentials
+.env
+
 
 # Ignore arquivos da pasta de camadas raw, silver e gold.
 # src/backend/data/1_raw/raw_wallet_br.csv
@@ -19,7 +21,4 @@ src/backend/1_extract/DEV_TEST
 src/backend/2_transform/DEV_TEST
 src/backend/3_load/DEV_TEST
 src/frontend/DEV_TEST
-
-# Ignore arquivos relacionados às chaves de API
-.env/
 
