feat: create BOT_RESEACH_CNPJ + Deleted the DEV_TEST folder from the online repository

--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,28 @@
 credentials
 .env
 
-
 # Ignore arquivos da pasta de camadas raw, silver e gold.
 # src/backend/data/1_raw/raw_wallet_br.csv
 # src/backend/data/1_raw/raw_historical_stock_price_br.csv
+# src/backend/data/1_raw/raw_address_company_br.csv
 
 src/backend/data/2_silver/silver_wallet_br.csv
 src/backend/data/2_silver/silver_historical_stock_price_br.csv
+src/backend/data/2_silver/silver_address_company_br.csv
 
 src/backend/data/3_gold/gold_dim_wallet_br.csv
 src/backend/data/3_gold/gold_fact_historical_stock_price_br.csv
+src/backend/data/3_gold/gold_dim_address_company_br.csv
 
-# Ignore pastas com scripts de test
-src/backend/1_extract/DEV_TEST
-src/backend/2_transform/DEV_TEST
-src/backend/3_load/DEV_TEST
-src/frontend/DEV_TEST
 
+# Ignore pastas com scripts de DEV_Test
+# BACKEND
+src/backend/etl/1_extract/DEV_TEST_EXTRACT
+src/backend/etl/1_extract/BOT_CNPJ/_DEV_TEST_BOT
+src/backend/etl/2_transform/DEV_TEST_TRANSFORM
+src/backend/etl/3_load/DEV_TEST_LOAD
+# FRONTEND
+src/frontend/DEV_TEST_FRONTEND
+
+# Ignore pastas com scripts de test DEV_API
+src/backend/api/DEV_TEST_API
